<resources>
    <string name="app_name">MyPortfolioApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="portfolio_title">My Nanodegree Apps!</string>

    <string name="project_1_title">Popular Movies</string>
    <string name="project_2_title">Football Scores App</string>
    <string name="project_3_title">Library App</string>
    <string name="project_4_title">Build It Bigger</string>
    <string name="project_5_title">XYZ Reader</string>
    <string name="project_6_title">Capstone</string>

</resources>
