<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/portfolio_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_1_title"
            android:id="@+id/button_proj1"
            android:layout_gravity="center_horizontal"
            android:background="#F3E5F5"
            android:onClick="launchApp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_2_title"
            android:id="@+id/button_proj2"
            android:layout_gravity="center_horizontal"
            android:background="#E1BEE7"
            android:onClick="launchApp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_3_title"
            android:id="@+id/button_proj3"
            android:layout_gravity="center_horizontal"
            android:background="#CE93D8"
            android:onClick="launchApp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_4_title"
            android:id="@+id/button_proj4"
            android:layout_gravity="center_horizontal"
            android:background="#BA68C8"
            android:onClick="launchApp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_5_title"
            android:id="@+id/button_proj5"
            android:layout_gravity="center_horizontal"
            android:background="#AB47BC"
            android:onClick="launchApp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_6_title"
            android:id="@+id/button_proj6"
            android:layout_gravity="center_horizontal"
            android:background="#9C27B0"
            android:onClick="launchApp"/>
    </LinearLayout>

</RelativeLayout>
